syntax = "proto3";

package services.user.store.v1;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message User {
    google.protobuf.StringValue id = 1;
    google.protobuf.StringValue username = 2;
    google.protobuf.StringValue email = 3;
    google.protobuf.BoolValue is_admin = 4;
    google.protobuf.BoolValue is_banned = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message CreateUserRequest {
    google.protobuf.StringValue username = 1;
    google.protobuf.StringValue email = 2;
    google.protobuf.StringValue password = 3;
}

message CreateUserResponse {
    User user = 1;
}
